--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "bullmq": "^5.49.2",
         "dotenv": "^16.5.0",
         "ioredis": "^5.6.1",
+        "luxon": "^3.6.1",
         "pg": "^8.16.0"
     },
     "devDependencies": {
+        "@types/luxon": "^3.6.2",
         "@types/node": "^22.14.1",
         "@vercel/node": "^5.1.14",
         "concurrently": "^8.2.2",
