🔧 Fix PEL overflow + Email alerts system
- Fix Redis PEL limit issue by ensuring XACK always happens
- Add email alert system for 401 API key errors
- Prevent future harassment incidents from delayed messages
- Add nodemailer dependency for email notifications

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "start": "concurrently \"npm run worker\" \"npm run scheduler\""
     },
     "dependencies": {
+        "@types/nodemailer": "^6.4.17",
         "bullmq": "^5.49.2",
         "dotenv": "^16.5.0",
         "ioredis": "^5.6.1",
         "luxon": "^3.6.1",
+        "nodemailer": "^7.0.4",
         "pg": "^8.16.0"
     },
     "devDependencies": {
